[package]
name = "vault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-contract-standards = "4.0.0"
near-sdk = "4.0.0"
uint = { version = "0.9.3", default-features = false }
serde = { version = "1.0.144", feature = ["derive"]}
serde_json = "1.0.61"
base64 = "0.13.0"
ed25519-dalek = "1.0.1"
bs58 = "0.4.0"